<resources>
    <string name="app_name" translatable="false">GyenesPaintball</string>
    <string name="reservation_details">Reservation details</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phoneNumber">Phone number</string>
    <string name="player_number">Player number</string>
    <string name="player_number_value">%1$d players</string>
    <string name="reservation_date">Date</string>
    <string name="reservation_package">Package</string>
    <string name="package_base_price">Base price</string>
    <string name="package_base_price_value" translatable="false">%1$d Ft</string>
    <string name="package_bullet_price">Bullet price</string>
    <string name="package_bullet_contains">Contained bullets</string>
    <string name="package_bullet_contains_value">%1$d bullets</string>
    <string name="package_length">Game length</string>
    <string name="package_game_length_value">%1$d hours</string>
    <string name="reservation_created_at">Created at</string>
    <string name="menu_reservations">Reservations</string>
    <string name="menu_messages">Messages</string>
    <string name="notes">Notes</string>
    <string name="new_reservation">New reservation</string>
    <string name="reservation_time">Time</string>
    <string name="save_reservation">Save reservation</string>
    <string name="update">Update</string>
    <string name="sync_state_new_detail">This new reservation was not uploaded to the server yet!</string>
    <string name="sync_state_update_detail">Updates were not registered in the server yet!</string>
    <string name="sync_state_delete_detail">Removal was not registered in the server yet!</string>
    <string name="delete">Delete</string>
    <string name="confirm_reservation_delete">Do your really want to delete the reservation with name %1$s?</string>
    <string name="yes">Yes</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="field_cannot_empty">%1$s cannot be empty!</string>
    <string name="Password">Password</string>
    <string name="login_failed">Incorrect email or password!</string>
    <string name="delete_from_server_success">Successfully deleted from server!</string>
</resources>